# glide

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LINUX_SUPPORT_PLAN.md  README.md  ROADMAP.md  build.rs
src/: cli.rs  cursor.rs  cursor_smooth.rs  cursor_types.rs  display.rs  main.rs  metadata.rs  processor.rs  recorder.rs  zoom.rs
src/linux/: capture.rs  display.rs  event_tap.rs  mod.rs  window.rs
src/macos/: capture.rs  display.rs  event_tap.rs  mod.rs  window.rs
src/processing/: click_highlight.rs  cursor.rs  effects.rs  frames.rs  mod.rs  motion_blur.rs  pipeline.rs  zoom.rs
src/recording/: encoder.rs  metadata.rs  mod.rs  recorder.rs
