[package]
name = "glide"
version = "0.1.0"
edition = "2021"
description = "CLI screen recorder with auto-zoom on clicks"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Terminal UI
indicatif = "0.17"

# Signal handling
ctrlc = { version = "3", features = ["termination"] }
image = "0.25.9"
tempfile = "3.24.0"
rayon = "1.11.0"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
screencapturekit = "1.5"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["record", "randr", "xfixes"] }
nix = { version = "0.29", features = ["signal"] }
